--- a/pom.xml
+++ b/pom.xml
@@ -42,10 +42,8 @@
 						<workers>${cloudhub.workers}</workers>
 						<objectStoreV2>true</objectStoreV2>
 						<properties>
-							
 							<anypoint.platform.client_id>${anypoint.platform.client_id}</anypoint.platform.client_id>
 							<anypoint.platform.client_secret>${anypoint.platform.client_secret}</anypoint.platform.client_secret>
-							
 						</properties>
 					</cloudHubDeployment>
 				</configuration>
@@ -57,13 +55,19 @@
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-http-connector</artifactId>
-			<version>1.7.1</version>
+			<version>1.7.3</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 		<dependency>
 			<groupId>org.mule.connectors</groupId>
 			<artifactId>mule-sockets-connector</artifactId>
-			<version>1.2.2</version>
+			<version>1.2.3</version>
+			<classifier>mule-plugin</classifier>
+		</dependency>
+		<dependency>
+			<groupId>org.mule.modules</groupId>
+			<artifactId>mule-validation-module</artifactId>
+			<version>2.0.2</version>
 			<classifier>mule-plugin</classifier>
 		</dependency>
 	</dependencies>
